@@ -1,3 +1,11 @@
+2010-07-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-start-file-process): Check only for
+	`remote-tty' process property.
+	(tramp-open-shell): Don't check for tty.
+	(tramp-open-connection-setup-interactive-shell): Set `remote-tty'
+	process property.
+
 2010-07-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-methods): Move hostname to the end in all ssh
